--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body {
     inset-inline-start: calc(50% - 111.5px);
     border-radius: 31.51px;
     border: 3px solid #1071ce;
-    background-color: #e01010;
+    background-color: #1071ce;
     color: white !important;
     display: flex;
     flex-direction: row;
