--- a/style.css
+++ b/style.css
@@ -159,9 +159,10 @@ body {
 
 /*index*/
 .cone-icon0 {
-    top: 5%;
+    top: 0%;
     left: 0%;
     --translateX: -5%;
+    transform: rotate(270deg);
 }
 
 .cone-icon1 {
@@ -347,7 +348,7 @@ body {
 }
 
 .aggiungi-giocatore-wrapper {
-    inline-size: calc(100%-32px);
+    inline-size: calc(100% - 100px);
     margin: 0 16px;
     border-radius: 34px;
     border: 3px solid #1071ce;
@@ -357,6 +358,7 @@ body {
     justify-content: center;
     padding: 10px 32px 10px 33px;
     color: black;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     background-color: transparent;
 }
 
@@ -508,7 +510,7 @@ body {
 }
 
 .occhio-che-se {
-    position: absolute;
+    position: relative;
     inset-block-end: 20px;
     inset-inline-start: calc(50% - 180px);
     font-size: 16.7px;
@@ -532,6 +534,7 @@ body {
 }
 
 .invio-password {
+    position: relative;
     inset-inline-start: calc(50% - 35px);
     cursor: pointer;
     margin-block-start: 620px;
@@ -539,12 +542,10 @@ body {
     transform: rotate(180deg);
     margin-inline-start: auto;
     margin-inline-end: auto;
+    margin-block-end: 10px;
 }
 
 /* password.html END - - - - - - - - - */
-
-
-
 /* adminhome.html START - - - - - - - - - */
 .ue-boss {
     position: absolute;
