--- a/style.css
+++ b/style.css
@@ -27,9 +27,9 @@ body {
 
 /* font1 UE BOSS */
 @font-face {
-    font-family: 'ClimateCrisis-Regular-VariableFont_YEAR';
-    src: url(fonts/ClimateCrisis-Regular-VariableFont_YEAR.ttf);
-    src: local('fonts/ClimateCrisis-Regular-VariableFont_YEAR'), url('fonts/ClimateCrisis-Regular-VariableFont_YEAR.ttf') format('truetype');
+    font-family: 'ClimateCrisis-Regular';
+    src: url(fonts/ClimateCrisis-Regular.ttf);
+    src: local('fonts/ClimateCrisis-Regular'), url('fonts/ClimateCrisis-Regular.ttf') format('truetype');
 }
 
 /* font2 PARTITA */
@@ -159,28 +159,33 @@ body {
 
 /*index*/
 .cone-icon0 {
-    top: 0%;
+    top: -5%;
     left: 0%;
     --translateX: -5%;
     transform: rotate(270deg);
 }
 
 .cone-icon1 {
-    top: 5%;
-    left: 100%;
+    top: 3%;
+    left: 80%;
     --translateX: -65%;
+    transform: rotate(0deg);
 }
 
 .cone-icon2 {
     top: 50%;
-    left: 0%;
-    --scale-factor: 1.2;
+    left: -5%;
+    --scale-factor: 1.5;
+    transform: rotate(0deg);
+
 }
 
 .cone-icon3 {
-    top: 50%;
-    left: 100%;
-    --scale-factor: 0.8
+    top: 40%;
+    left: 80%;
+    --scale-factor: 0.8;
+    transform: rotate(240deg);
+
 }
 
 .cone-icon4 {
@@ -191,22 +196,25 @@ body {
 }
 
 .cone-icon5 {
-    top: 95%;
-    left: 100%;
+    top: 90%;
+    left: 80%;
     --scale-factor: 1.6;
     --translateX: -65%;
     --translateY: -35%;
+    transform: rotate(260deg);
+
 }
 
 
 /*classifica*/
 .cone-icon6 {
     position: absolute;
-    inset-block-start: -32px;
-    inset-inline-end: -30px;
+    inset-block-start: -12px;
+    inset-inline-end: -10px;
     inline-size: 113.2px;
     block-size: 139.7px;
     object-fit: contain;
+    transform: rotate(355deg)
 }
 
 /*regolamento*/
@@ -217,6 +225,8 @@ body {
     inline-size: 261.5px;
     block-size: 226.2px;
     object-fit: contain;
+    transform: rotate(160deg);
+
 }
 
 .cone-icon8 {
@@ -231,19 +241,23 @@ body {
 .cone-icon9 {
     position: absolute;
     inset-block-start: 89.17px;
-    inset-inline-start: -61.98px;
+    inset-inline-start: -75px;
     inline-size: 233.4px;
     block-size: 263.9px;
     object-fit: contain;
+    transform: rotate(90deg);
+
 }
 
 .cone-icon10 {
     position: absolute;
-    inset-block-end: -37px;
+    inset-block-end: 10px;
     inset-inline-end: -140px;
     inline-size: 261.5px;
     block-size: 226.2px;
     object-fit: contain;
+    transform: rotate(210deg);
+
 }
 
 /* contatti */
@@ -254,6 +268,8 @@ body {
     inline-size: 261.5px;
     block-size: 226.2px;
     object-fit: contain;
+    transform: rotate(180deg);
+
 }
 
 .cone-icon12 {
@@ -273,6 +289,7 @@ body {
     inline-size: 269px;
     block-size: 219.5px;
     object-fit: contain;
+    transform: rotate(10deg);
 }
 
 .cone-icon14 {
@@ -282,6 +299,8 @@ body {
     inline-size: 276px;
     block-size: 262.3px;
     object-fit: contain;
+    transform: rotate(160deg);
+
 }
 
 /* - - - - - - - - PIGNE END - - - - - - - -*/
