--- a/style.css
+++ b/style.css
@@ -573,6 +573,7 @@ body {
     font-size: 46.1px;
     text-transform: lowercase;
     font-family: 'Climate Crisis';
+    color: #000;
 }
 
 .modifica-bonus {
